# Resume-chatbot-with-RAG

./: .gitattributes  1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  DEPLOY_TO_HF.md  HUGGING_FACE_DEPLOYMENT.md  RAG_DOCUMENTS_GUIDE.md  RAG_PERFORMANCE_OPTIMIZATIONS.md  README.md  app.py  app_hf.py  check_document_content.py  check_thesis_content.py  debug_rag.py  debug_rag_retrieval.py  force_reset_rag.py  performance_test.py  pyproject.toml  rag_performance_test.py  requirements.txt  requirements_hf.txt  reset_rag.py  test_rag_access.py  update_documents.py
me/: summary.txt
vector_db/: chroma.sqlite3
