[project]
name = "career-conversations"
version = "0.1.0"
description = "Chatbot powered by RAG for personalized career conversations"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests",
    "python-dotenv",
    "gradio",
    "pypdf",
    "openai",
    "openai-agents",
    "chromadb",
    "numpy"
]
